--- a/force-app/main/default/classes/DependencyExplorerCtrl.cls
+++ b/force-app/main/default/classes/DependencyExplorerCtrl.cls
@@ -1,4 +1,4 @@
-public with sharing class DependencyDataCtrl {
+public with sharing class DependencyExplorerCtrl {
 
 	public List<GexfAttribute> attributes { get; private set; }
 	public Map<String, GexfNode> nodes { get; private set; }
@@ -7,7 +7,7 @@ public with sharing class DependencyDataCtrl {
 
 	// CONSTRUCTOR
 
-	public DependencyDataCtrl() {
+	public DependencyExplorerCtrl() {
 		attributes = new List<GexfAttribute>{
 			new GexfAttribute('type', 'String'),
 			new GexfAttribute('sfdcId', 'String'),
@@ -85,6 +85,48 @@ public with sharing class DependencyDataCtrl {
 
 		public GexfEdge gexfEdge() {
 			return new GexfEdge(gexfSource().id, gexfTarget().id);
+		}
+	}
+
+	public class GexfEdge {
+		public String id { get; private set; }
+		public String source { get; private set; }
+		public String target { get; private set; }
+
+		public GexfEdge(String source, String target) {
+			this.source = source;
+			this.target = target;
+		}
+	}
+
+
+	public class GexfNode {
+		public String id {get; private set;}
+		public String label { get; private set; }
+		public Map<String, String> attributes { get; private set; }
+
+		public GexfNode(String id) {
+			attributes = new Map<String, String>();
+			this.id = id;
+			this.label = id;
+		}
+
+		public GexfNode attribute(String key, String value) {
+			attributes.put(key, value);
+			return this;
+		}
+	}
+
+
+	public class GexfAttribute {
+		public String id { get; private set; }
+		public String title { get; private set; }
+		public String type { get; private set; }
+
+		public GexfAttribute(String id, String type) {
+			this.id = id;
+			title = id;
+			this.type = type;
 		}
 	}
 }
